add footer;  refactor mixins, soacials, navigations

--- a/src/html/components/blocks/_footer.html
+++ b/src/html/components/blocks/_footer.html
@@ -1,3 +1,197 @@
 <footer class="footer">
-  <div class="container"></div>
+    <div class="footer__top">
+        <div class="footer__contacts">
+            <a class="footer__logo logo" href="#">
+                <img class="logo__img" src="img/logo.svg" alt="Логотип" width="155" height="28">
+            </a>
+            <div class="navigation-connection">
+                <ul class="socials">
+                    <li class="socials__item">
+                        <a class="socials__link" href="#" target="_blank" aria-label="Ватсап">
+                            <svg>
+                                <use xlink:href="img/sprite.svg#whatsapp">
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="socials__item">
+                        <a class="socials__link" href="#" target="_blank" aria-label="Телеграм">
+                            <svg>
+                                <use xlink:href="img/sprite.svg#telegram">
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+                <ul class="navigation-connection__contacts">
+                    <li class="navigation-connection__contact">
+                        <a class="navigation-connection__link" href="tel:+70070000880">
+                            +7 (007)-000-08-80
+                        </a>
+                    </li>
+                    <li class="navigation-connection__contact">
+                        <a class="navigation-connection__link" href="mailto:info@zetta.ru">
+                            info@zetta.ru
+                        </a>
+                    </li>
+                </ul>
+                <p class="navigation-connection__text">
+                    Ежедневно с 11:00 до 21:00
+                </p>
+            </div>
+        </div>
+        <ul class="footer__items">
+            <li>
+                <a class="footer__link" href="#">
+                    Каталог
+                </a>
+            </li>
+            <li>
+                <a class="footer__link" href="#">
+                    Cashback 25%
+                </a>
+            </li>
+            <li>
+                <a class="footer__link" href="#">
+                    Адреса салонов
+                </a>
+            </li>
+            <li>
+                <a class="footer__link" href="#">
+                    Заказать проект
+                </a>
+            </li>
+        </ul>
+    </div>
+    <div class="footer__nav">
+        <ul class="nav-menu">
+            <li class="nav-menu__category">
+                <span class="nav-menu__title">
+                    Кухонные решения
+                </span>
+                <ul class="nav-menu__items">
+                    <li>
+                        <a href="#">Современный стиль</a>
+                    </li>
+                    <li>
+                        <a href="#">Нео классика</a>
+                    </li>
+                    <li>
+                        <a href="#">Классический стиль</a>
+                    </li>
+                    <li>
+                        <a href="#">Все кухни</a>
+                    </li>
+                </ul>
+            </li>
+            <li class="nav-menu__category">
+                <span class="nav-menu__title">
+                    Корпусная мебель
+                </span>
+                <ul class="nav-menu__items">
+                    <li>
+                        <a href="#">Шкафы</a>
+                    </li>
+                    <li>
+                        <a href="#">Гостинные</a>
+                    </li>
+                    <li>
+                        <a href="#">Гардеробные</a>
+                    </li>
+                    <li>
+                        <a href="#">Прихожие</a>
+                    </li>
+                    <li>
+                        <a href="#">Аксессуары для шкафов</a>
+                    </li>
+                </ul>
+            </li>
+            <li class="nav-menu__category">
+                <span class="nav-menu__title">
+                    Дополнительно
+                </span>
+                <ul class="nav-menu__items">
+                    <li>
+                        <a href="#">Бытовая техника</a>
+                    </li>
+                    <li>
+                        <a href="#">Продажа образцов</a>
+                    </li>
+                    <li>
+                        <a href="#">Реализованные проекты</a>
+                    </li>
+                    <li>
+                        <a href="#">Мойки и аксессуары</a>
+                    </li>
+                </ul>
+            </li>
+            <li class="nav-menu__category">
+                <span class="nav-menu__title">
+                    Клиентам
+                </span>
+                <ul class="nav-menu__items">
+                    <li>
+                        <a href="#">Адреса салонов</a>
+                    </li>
+                    <li>
+                        <a href="#">3D проекты</a>
+                    </li>
+                    <li>
+                        <a href="#">Доставка</a>
+                    </li>
+                    <li>
+                        <a href="#">Замер помещения</a>
+                    </li>
+                    <li>
+                        <a href="#">Гарантия 12 лет</a>
+                    </li>
+                    <li>
+                        <a href="#">Монтаж мебели</a>
+                    </li>
+                    <li>
+                        <a href="#">Покупателям</a>
+                    </li>
+                </ul>
+            </li>
+            <li class="nav-menu__category">
+                <span class="nav-menu__title">
+                    О компании
+                </span>
+                <ul class="nav-menu__items">
+                    <li>
+                        <a href="#">Производство</a>
+                    </li>
+                    <li>
+                        <a href="#">История компании</a>
+                    </li>
+                    <li>
+                        <a href="#">Миссия и ценности</a>
+                    </li>
+                    <li>
+                        <a href="#">Работа в Zetta</a>
+                    </li>
+                    <li>
+                        <a href="#">Франшиза</a>
+                    </li>
+                    <li>
+                        <a href="#">Блог</a>
+                    </li>
+                </ul>
+            </li>
+            <li class="nav-menu__category">
+                <span class="nav-menu__title">
+                    Документация
+                </span>
+                <ul class="nav-menu__items">
+                    <li>
+                        <a href="#">Политика конфиденциальности</a>
+                    </li>
+                    <li>
+                        <a href="#">Карта сайта</a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+        <span class="footer__copyright">
+            Copyright © 1998-2023 Zetta. All rights reserved.
+        </span>
+    </div>
 </footer>
