--- a/src/html/components/blocks/_side-menu.html
+++ b/src/html/components/blocks/_side-menu.html
@@ -55,10 +55,23 @@
         </li>
     </ul>
 
-    <div class="navigation-connection side-menu__connection">
-        <p class="navigation-connection__text">
-            Ежедневно с 11:00 до 21:00
-        </p>
+    <div class="navigation-connection">
+        <ul class="socials">
+            <li class="socials__item">
+                <a class="socials__link" href="#" target="_blank" aria-label="Ватсап">
+                    <svg>
+                        <use xlink:href="img/sprite.svg#whatsapp">
+                    </svg>
+                </a>
+            </li>
+            <li class="socials__item">
+                <a class="socials__link" href="#" target="_blank" aria-label="Телеграм">
+                    <svg>
+                        <use xlink:href="img/sprite.svg#telegram">
+                    </svg>
+                </a>
+            </li>
+        </ul>
         <ul class="navigation-connection__contacts">
             <li class="navigation-connection__contact">
                 <a class="navigation-connection__link" href="tel:+70070000880">
@@ -71,21 +84,8 @@
                 </a>
             </li>
         </ul>
-        <ul class="socials">
-            <li class="socials__item">
-                <a class="socials__link" href="#" target="_blank" aria-label="ВКонтакте">
-                    <svg>
-                        <use xlink:href="img/sprite.svg#whatsapp">
-                    </svg>
-                </a>
-            </li>
-            <li class="socials__item">
-                <a class="socials__link" href="#" target="_blank" aria-label="Ютуб">
-                    <svg>
-                        <use xlink:href="img/sprite.svg#telegram">
-                    </svg>
-                </a>
-            </li>
-        </ul>
+        <p class="navigation-connection__text">
+            Ежедневно с 11:00 до 21:00
+        </p>
     </div>
 </nav>
