--- a/src/html/components/blocks/header/_burger-menu.html
+++ b/src/html/components/blocks/header/_burger-menu.html
@@ -155,7 +155,7 @@
     </div>
 
     <ul class="nav-menu">
-        <li>
+        <li class="nav-menu__category">
             <span class="nav-menu__title">
                 Клиентам
             </span>
@@ -183,7 +183,7 @@
                 </li>
             </ul>
         </li>
-        <li>
+        <li class="nav-menu__category">
             <span class="nav-menu__title">
                 О компании
             </span>
@@ -213,7 +213,7 @@
         </li>
     </ul>
     <div class="burger-menu__contacts">
-        <div class="navigation-connection burger-menu__connection">
+        <div class="navigation-connection">
             <ul class="navigation-connection__contacts">
                 <li class="navigation-connection__contact">
                     <a class="navigation-connection__link" href="tel:+70070000880">
@@ -226,7 +226,7 @@
                     </a>
                 </li>
             </ul>
-            <ul class="socials">
+            <ul class="socials burger-menu__socials">
                 <li class="socials__item">
                     <a class="socials__link" href="#" target="_blank" aria-label="ВКонтакте">
                         <svg>
@@ -242,7 +242,7 @@
                     </a>
                 </li>
             </ul>
-            <ul class="socials socials--mobile">
+            <ul class="socials burger-menu__socials burger-menu__socials--mobile">
                 <li class="socials__item">
                     <a class="socials__link" href="#" target="_blank" aria-label="Ватсап">
                         <svg>
