--- a/src/html/components/blocks/header/_menu-categories.html
+++ b/src/html/components/blocks/header/_menu-categories.html
@@ -4,7 +4,7 @@
     </span>
     <div class="menu-categories__wrapper">
         <ul class="nav-menu menu-categories__list">
-            <li>
+            <li class="nav-menu__category">
                 <span class="nav-menu__title">
                     Кухонные решения
                 </span>
@@ -23,7 +23,7 @@
                     </li>
                 </ul>
             </li>
-            <li>
+            <li class="nav-menu__category">
                 <span class="nav-menu__title">
                     Корпусная мебель
                 </span>
@@ -45,7 +45,7 @@
                     </li>
                 </ul>
             </li>
-            <li>
+            <li class="nav-menu__category">
                 <ul class="nav-menu__items nav-menu__items--root">
                     <li>
                         <a href="#">Бытовая техника</a>
