--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,4 +1,5 @@
 body {
+	height: 100%;
 	font-family: var(--font-main), 'Arial', sans-serif;
 	font-weight: 400;
 	font-size: 14px;
@@ -19,15 +20,19 @@ body {
 	}
 }
 
-.wrapper {
-	display: flex;
-	flex-direction: column;
-	overflow: hidden;
-	min-height: 100vh;
-}
-
 .main {
 	flex: 1 1 auto;
+}
+
+.wrapper,
+.inner {
+	display: flex;
+	height: 100%;
+}
+
+.inner {
+	flex-direction: column;
+	width: 100%;
 }
 
 .lock {
@@ -119,8 +124,4 @@ body {
 		z-index: 4;
 		opacity: 0.5;
 	}
-}
-
-.content {
-	display: flex;
 }
