--- a/src/styles/components/blocks/_footer.scss
+++ b/src/styles/components/blocks/_footer.scss
@@ -1,3 +1,210 @@
 .footer {
-    
+	flex: 0 0 auto;
+	margin-bottom: 500px;
+	border-left: 1px solid var(--color-grey-200);
+	background-color: var(--color-grey-100);
+
+	&__top {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		padding: 0 20px 50px;
+		gap: 30px;
+
+		@include mq(md, min) {
+			display: none;
+		}
+
+		@include mq(sm) {
+			padding-bottom: 40px;
+		}
+	}
+
+	&__logo {
+		margin-bottom: 20px;
+		height: 42px;
+		max-width: 233px;
+
+		@include mq(sm) {
+			height: 28px;
+			max-width: 155px;
+		}
+	}
+
+	.navigation-connection {
+		gap: 20px;
+
+		&__contacts {
+			gap: 5px;
+		}
+	}
+
+	&__items {
+		@include flex-simple(15px, column);
+	}
+
+	&__link {
+		@include link-with-arrows;
+
+		font-size: 16px;
+		line-height: 1.3;
+		letter-spacing: -0.04em;
+
+		@include mq(sm) {
+			font-size: 12px;
+		}
+	}
+
+	&__nav {
+		position: relative;
+	}
+
+	.nav-menu {
+		display: grid;
+		grid-template-columns: repeat(4, 1fr);
+		grid-template-rows: auto;
+
+		&__category {
+			border: 1px solid var(--color-grey-200);
+			border-bottom: 0;
+			border-left: 0;
+			padding: 60px 25px;
+			width: 100%;
+
+			@include mq(lg) {
+				padding: 40px 20px;
+			}
+
+			@include mq(sm) {
+				padding: 28px 20px;
+			}
+
+			// первые три элемента
+			&:nth-child(-n + 3) {
+				@include mq(lg, min) {
+					border-top: 0;
+					padding-top: 80px;
+				}
+
+				@include mq(sm, min) {
+					border-top: 1px solid var(--color-grey-200);
+					padding-top: 40px;
+				}
+			}
+
+			// последние три элемента
+			&:nth-last-child(-n + 3) {
+				@include mq(sm, min) {
+					border-bottom: 0;
+					padding-bottom: 80px;
+				}
+			}
+
+			&:nth-child(6n + 1) {
+				@include mq(lg, min) {
+					padding-left: 45px;
+				}
+
+				@include mq(md, min) {
+					border-bottom: 1px solid var(--color-grey-200);
+					padding-left: 20px;
+				}
+			}
+
+			&:nth-child(3),
+			&:nth-child(6n + 3) {
+				@include mq(md, min) {
+					grid-column: span 2;
+					width: 50%;
+				}
+			}
+
+			&:nth-child(4),
+			&:nth-child(6n + 4) {
+				@include mq(md, min) {
+					justify-self: end;
+					grid-column: span 2;
+					border-left: 1px solid var(--color-grey-200);
+					width: 50%;
+				}
+			}
+
+			&:nth-child(6n + 6):not(:last-child) {
+				@include mq(lg, min) {
+					border-right: 0;
+					border-bottom: 1px solid var(--color-grey-200);
+					padding-right: 45px;
+				}
+
+				@include mq(md, min) {
+					padding-right: 20px;
+				}
+			}
+
+			&:nth-child(odd) {
+				@include mq(sm) {
+					padding-right: 10px;
+				}
+			}
+
+			&:nth-child(even) {
+				@include mq(sm) {
+					padding-left: 10px;
+				}
+			}
+
+			&:nth-last-child(2),
+			&:nth-last-child(1) {
+				@include mq(sm) {
+					border-bottom: 1px solid var(--color-grey-200);
+					padding-bottom: 60px;
+				}
+			}
+
+			@include mq(sm) {
+				border-right: 0;
+			}
+		}
+
+		@include mq(md) {
+			grid-template-columns: repeat(3, 1fr);
+		}
+
+		@include mq(sm) {
+			grid-template-columns: repeat(2, 1fr);
+			margin-bottom: 10px;
+		}
+	}
+
+	&__copyright {
+		position: absolute;
+		right: 0;
+		bottom: 80px;
+		padding: 0 25px;
+		width: 25%;
+		font-size: 12px;
+		letter-spacing: -0.03em;
+		color: var(--color-grey-500);
+
+		@include mq(lg) {
+			padding: 0 20px;
+		}
+
+		@include mq(md) {
+			width: 33.333%;
+		}
+
+		@include mq(sm) {
+			position: static;
+			width: 100%;
+			font-size: 10px;
+		}
+	}
+
+	@include mq(md) {
+		padding-top: 80px;
+	}
+
+	@include mq(sm) {
+		padding: 60px 0 20px;
+	}
 }
