--- a/src/styles/components/blocks/_socials.scss
+++ b/src/styles/components/blocks/_socials.scss
@@ -12,7 +12,7 @@
 	}
 
 	&__link {
-		@include flex;
+		@include flex-alignment;
 
 		outline: 0;
 		border: 1px solid transparent;
@@ -42,39 +42,6 @@
 			&:hover {
 				background-color: var(--color-orange-400);
 			}
-		}
-	}
-
-	@include mq(md) {
-		display: none;
-	}
-
-	&--mobile {
-		display: none;
-
-		.socials__item {
-			@include mq(md) {
-				width: 50px;
-				height: 50px;
-			}
-
-			@include mq(sm) {
-				width: 38px;
-				height: 38px;
-			}
-		}
-
-		.socials__link {
-			border-radius: 12px;
-			background-color: var(--color-grey-100);
-
-			@include mq(sm) {
-				border-radius: 8px;
-			}
-		}
-
-		@include mq(md) {
-			display: flex;
 		}
 	}
 }
