--- a/src/styles/components/blocks/header/burger/_burger-menu.scss
+++ b/src/styles/components/blocks/header/burger/_burger-menu.scss
@@ -1,9 +1,9 @@
 .burger-menu {
+	@include flex-alignment(0, start, start, column);
+
 	position: fixed;
 	right: 0;
 	top: 0;
-	display: flex;
-	align-items: center;
 	overflow: hidden;
 	padding: 154px 50px 64px 109px;
 	width: 100%;
@@ -12,8 +12,6 @@
 	visibility: hidden;
 	transform: translateX(100%);
 	transition: transform 0.5s;
-
-	@include flex(start, start, column);
 
 	@include mq(lg) {
 		padding: 120px 20px 40px;
@@ -85,10 +83,84 @@
 		}
 	}
 
-	&__connection {
+	.navigation-connection {
 		padding-right: 40px;
 		width: 50%;
 		gap: 30px;
+
+		&__contacts {
+			gap: 15px;
+
+			@include mq(md) {
+				flex: 1 1 auto;
+				flex-direction: row-reverse;
+				align-self: flex-start;
+				justify-content: flex-end;
+				gap: 5px;
+			}
+		}
+
+		&__link {
+			@include link-border-bottom;
+
+			@include mq(md) {
+				@include flex-alignment(5px);
+
+				border-bottom: 0;
+				border-radius: 12px;
+				padding: 15px;
+				text-align: center;
+				background-color: var(--color-grey-100);
+			}
+
+			@include mq(sm) {
+				border-radius: 8px;
+				padding: 12px;
+				font-size: 10px;
+			}
+		}
+
+		@include mq(md) {
+			flex-direction: row;
+			padding-right: 0;
+			width: 100%;
+			gap: 5px;
+		}
+	}
+
+	&__socials {
+		@include mq(md) {
+			display: none;
+		}
+
+		&--mobile {
+			display: none;
+
+			.socials__item {
+				@include mq(md) {
+					width: 50px;
+					height: 50px;
+				}
+
+				@include mq(sm) {
+					width: 38px;
+					height: 38px;
+				}
+			}
+
+			.socials__link {
+				border-radius: 12px;
+				background-color: var(--color-grey-100);
+
+				@include mq(sm) {
+					border-radius: 8px;
+				}
+			}
+
+			@include mq(md) {
+				display: flex;
+			}
+		}
 	}
 
 	&__buttons {
@@ -124,11 +196,10 @@
 	}
 
 	&__bottom {
-		display: flex;
-		flex-direction: column;
+		@include flex-simple(8px, column);
+
 		margin-top: auto;
 		color: var(--color-grey-500);
-		gap: 8px;
 
 		@include mq(md) {
 			border-top: 1px solid var(--color-grey-200);
