--- a/src/styles/components/cards/_nav-card.scss
+++ b/src/styles/components/cards/_nav-card.scss
@@ -1,10 +1,9 @@
 .nav-card {
-	@include flex(flex-end, center, column-reverse);
+	@include flex-alignment(5px, flex-end, center, column-reverse);
 
 	position: relative;
 	width: 100%;
 	height: 100%;
-	gap: 5px;
 
 	&--large {
 		gap: 22px;
