--- a/src/styles/includes/_components.scss
+++ b/src/styles/includes/_components.scss
@@ -15,6 +15,7 @@
 @import '../components/blocks/socials';
 @import '../components/blocks/menu-mobile';
 @import '../components/blocks/breadcrumbs';
+@import '../components/blocks/footer';
 
 // Cards
 @import '../components/cards/banner-card';
