--- a/src/styles/mixins/_mini.scss
+++ b/src/styles/mixins/_mini.scss
@@ -4,11 +4,23 @@
 	background-repeat: no-repeat;
 }
 
-@mixin flex($justify: center, $align: center, $direction: row) {
+@mixin flex-alignment(
+	$gap: 0,
+	$justify: center,
+	$align: center,
+	$direction: row
+) {
 	display: flex;
 	flex-direction: $direction;
 	align-items: $align;
 	justify-content: $justify;
+	gap: $gap;
+}
+
+@mixin flex-simple($gap: 20px, $direction: row) {
+	display: flex;
+	flex-direction: $direction;
+	gap: $gap;
 }
 
 @mixin resize-img {
