--- a/src/styles/templates/_stepper.scss
+++ b/src/styles/templates/_stepper.scss
@@ -3,39 +3,40 @@
 	display: flex;
 	align-items: center;
 	width: 100%;
-	max-width: 150px;
 	height: 50px;
+	max-width: 150px;
 	user-select: none;
 
 	&__field {
 		display: flex;
 		align-items: center;
-		width: 100%;
-		height: 100%;
-		padding-left: 20px;
 		border: 1px solid #e5e5e5;
 		border-radius: 4px;
+		padding-left: 20px;
+		width: 100%;
+		height: 100%;
 	}
 
 	&__input {
-		width: 10px;
-		min-width: 2ex;
-		height: 100%;
-		font-weight: 700;
-		border: none;
-		outline: none;
 		@include number;
+
+		outline: none;
+		border: none;
+		width: 10px;
+		height: 100%;
+		min-width: 2ex;
+		font-weight: 700;
 	}
 
 	&__btns {
+		@include flex-simple(0, column);
+
 		position: absolute;
-		top: 50%;
 		right: 2px;
-		display: flex;
-		flex-direction: column;
+		top: 50%;
+		border-left: 1px solid #e5e5e5;
 		width: 20%;
 		height: calc(100% - 2px);
-		border-left: 1px solid #e5e5e5;
 		transform: translateY(-50%);
 	}
 
@@ -43,10 +44,10 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		height: 50%;
-		padding: 0;
-		background-color: transparent;
 		border: none;
+		padding: 0;
+		height: 50%;
+		background-color: transparent;
 		cursor: pointer;
 
 		&--disabled {
