refactor header, side-menu

--- a/src/html/components/blocks/_side-menu.html
+++ b/src/html/components/blocks/_side-menu.html
@@ -24,7 +24,7 @@
 
     <ul class="side-menu__items side-menu__items--dots">
         <li>
-            <a class="side-menu__link side-menu__link--active" href="#">
+            <a class="side-menu__link" href="#">
                 Портфолио
             </a>
         </li>
