--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -24,15 +24,16 @@ body {
 	flex: 1 1 auto;
 }
 
-.wrapper,
-.inner {
+.wrapper {
 	display: flex;
 	height: 100%;
 }
 
 .inner {
+	display: flex;
 	flex-direction: column;
 	width: 100%;
+	height: 100vh;
 }
 
 .lock {
