start questions block

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,7 +4,7 @@
 @import 'includes/mixins';
 @import 'includes/libs';
 // @import 'includes/utils';
-// @import 'includes/templates';
+@import 'includes/templates';
 @import 'global';
 @import 'includes/components';
 // @import 'includes/pages';
