--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -9,17 +9,6 @@ body {
 	background-color: var(--color-white);
 }
 
-.container {
-	margin: 0 auto;
-	padding: 0 45px;
-	width: 100%;
-	max-width: 1340px;
-
-	@include mq(lg) {
-		padding: 0 20px;
-	}
-}
-
 .main {
 	flex: 1 1 auto;
 }
@@ -34,6 +23,15 @@ body {
 	flex-direction: column;
 	width: 100%;
 	height: 100vh;
+	z-index: 40;
+}
+
+.section {
+	padding-bottom: 180px;
+
+	@include mq(md) {
+		padding-bottom: 130px;
+	}
 }
 
 .lock {
