--- a/src/styles/templates/_spollers.scss
+++ b/src/styles/templates/_spollers.scss
@@ -1,63 +1,66 @@
 .spollers {
-	&:not(:last-child) {
-		margin-bottom: rem(15);
-	}
-
 	&__item {
-		font-size: rem(20);
+		border-top: 1px solid var(--color-grey-200);
+		padding: 25px 0;
 
-		&:not(:last-child) {
-			margin-bottom: em(30, 20);
+		@include mq(sm) {
+			padding: 18px 0;
+		}
+
+		&:last-child {
+			border-bottom: 1px solid var(--color-grey-200);
 		}
 	}
 
-	&__title,
-	&__button {
-		position: relative;
-		width: 100%;
-		padding: rem(10) rem(15);
-		text-align: left;
-		border: 1px solid #eee;
-		border-radius: rem(5);
+	&__header {
+		@include flex-alignment(10px, space-between, flex-start);
 	}
 
-	&__button {
-		position: relative;
+	&__title {
+		font-size: 18px;
+		line-height: 1.3;
+		color: var(--color-dark-600);
+		transition: color 0.3s;
 
-		&::before,
-		&::after {
-			position: absolute;
-			top: 50%;
-			right: 10px;
-			width: 15px;
-			height: 2px;
-			background-color: var(--color-black);
-			transition: transform 0.5s ease 0s;
-			content: '';
-		}
-
-		&::before {
-			transform: translate(-75%, -50%) rotate(40deg);
-		}
-
-		&::after {
-			transform: translate(0, -50%) rotate(-40deg);
+		@include mq(sm) {
+			font-size: 14px;
 		}
 
 		&--active {
-			&::before {
-				transform: translateX(-75%) rotate(-40deg);
-			}
+			color: var(--color-orange-400);
+		}
+	}
 
-			&::after {
-				transform: rotate(40deg);
-			}
+	&__button {
+		width: 24px;
+		height: 24px;
+		color: var(--color-dark-600);
+		transform: rotate(45deg);
+		transition: transform 0.3s;
+
+		@include mq(sm) {
+			width: 20px;
+			height: 20px;
+		}
+
+		svg {
+			width: 100%;
+			height: 100%;
+			transition: stroke 0.3s;
+		}
+
+		&--active {
+			color: var(--color-orange-400);
+			transform: rotate(0);
 		}
 	}
 
 	&__body {
-		padding: rem(20);
-		border: 1px solid #eee;
-		border-radius: rem(5);
+		padding-top: 10px;
+
+		@include mq(sm) {
+			padding-top: 5px;
+			font-size: 12px;
+		}
 	}
 }
