--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -15,15 +15,22 @@ body {
 
 .wrapper {
 	display: flex;
-	height: 100%;
-}
-
-.inner {
-	display: flex;
 	flex-direction: column;
+	padding-top: 95px;
 	width: 100%;
-	height: 100vh;
-	z-index: 40;
+	height: 100%;
+
+	@include mq(lg) {
+		padding-bottom: 80px;
+	}
+
+	@include mq(sm) {
+		padding-top: 72px;
+	}
+
+	@include mq(xl, min) {
+		padding-left: 255px;
+	}
 }
 
 .section {
