--- a/src/styles/components/blocks/_side-menu.scss
+++ b/src/styles/components/blocks/_side-menu.scss
@@ -1,9 +1,14 @@
 .side-menu {
-	@include flex-simple(100px, column);
+	@include flex-simple(10vh, column);
 
-	padding: 60px 20px 60px 50px;
+	position: fixed;
+	left: 0;
+	top: 95px;
+	bottom: 0;
+	z-index: 2;
+	overflow-y: auto;
+	padding: 6.5vh 20px 6.5vh 50px;
 	width: 100%;
-	height: 100vh;
 	max-width: 255px;
 	background-color: var(--color-grey-100);
 
@@ -27,6 +32,7 @@
 					width: 6px;
 					height: 6px;
 					background-color: transparent;
+					transform: translateY(-50%);
 					transition: background-color 0.3s;
 				}
 
