--- a/src/styles/components/blocks/header/_header.scss
+++ b/src/styles/components/blocks/header/_header.scss
@@ -2,10 +2,11 @@
 	position: fixed;
 	right: 0;
 	top: 0;
-	z-index: 5;
+	z-index: 10;
 	width: 100%;
 	height: 95px;
 	font-weight: 500;
+	background-color: var(--color-white);
 
 	@include mq(sm) {
 		height: 72px;
