--- a/src/styles/templates/_spollers.scss
+++ b/src/styles/templates/_spollers.scss
@@ -1,5 +1,6 @@
 .spollers {
 	&__item {
+		position: relative;
 		border-top: 1px solid var(--color-grey-200);
 		padding: 25px 0;
 
@@ -12,17 +13,16 @@
 		}
 	}
 
-	&__header {
-		@include flex-alignment(10px, space-between, flex-start);
-	}
-
 	&__title {
+		padding-right: 34px;
 		font-size: 18px;
 		line-height: 1.3;
 		color: var(--color-dark-600);
 		transition: color 0.3s;
+		cursor: pointer;
 
 		@include mq(sm) {
+			padding-right: 30px;
 			font-size: 14px;
 		}
 
@@ -32,6 +32,9 @@
 	}
 
 	&__button {
+		position: absolute;
+		right: 0;
+		top: 25px;
 		width: 24px;
 		height: 24px;
 		color: var(--color-dark-600);
