add questions block

--- a/src/styles/components/blocks/_questions.scss
+++ b/src/styles/components/blocks/_questions.scss
@@ -4,9 +4,20 @@
 	&__container {
 		@include flex-alignment(40px, space-between, flex-start);
 		@include container;
+
+		@include mq(lg) {
+			flex-direction: column-reverse;
+			gap: 100px;
+		}
+
+		@include mq(sm) {
+			gap: 50px;
+		}
 	}
 
 	&__list {
+		width: 100%;
+
 		@include mq(lg, min) {
 			width: 50%;
 		}
@@ -14,11 +25,25 @@
 
 	.form {
 		&__title {
+			font-weight: 500;
 			font-size: 18px;
 		}
 
 		@include mq(lg, min) {
-			width: 36%;
+			width: 35%;
+		}
+
+		&__bottom {
+			@include flex-simple(12px, column);
+		}
+
+		&__button {
+			margin-right: auto;
+			white-space: nowrap;
+		}
+
+		@include mq(md) {
+			gap: 30px;
 		}
 	}
 }
