--- a/src/styles/templates/_spollers.scss
+++ b/src/styles/templates/_spollers.scss
@@ -13,56 +13,50 @@
 		}
 	}
 
-	&__title {
-		padding-right: 34px;
+	&__button {
+		@include flex-alignment(10px, space-between);
+
+		width: 100%;
 		font-size: 18px;
 		line-height: 1.3;
 		color: var(--color-dark-600);
 		transition: color 0.3s;
-		cursor: pointer;
+		gap: 10px;
 
 		@include mq(sm) {
-			padding-right: 30px;
 			font-size: 14px;
 		}
 
-		&--active {
-			color: var(--color-orange-400);
-		}
-	}
-
-	&__button {
-		position: absolute;
-		right: 0;
-		top: 25px;
-		width: 24px;
-		height: 24px;
-		color: var(--color-dark-600);
-		transform: rotate(45deg);
-		transition: transform 0.3s;
-
-		@include mq(sm) {
-			width: 20px;
-			height: 20px;
-		}
-
 		svg {
-			width: 100%;
-			height: 100%;
-			transition: stroke 0.3s;
+			width: 24px;
+			height: 24px;
+			transform: rotate(45deg);
+			transition:
+				stroke 0.3s,
+				transform 0.3s;
+
+			@include mq(sm) {
+				width: 20px;
+				height: 20px;
+			}
 		}
 
 		&--active {
 			color: var(--color-orange-400);
-			transform: rotate(0);
+
+			svg {
+				transform: rotate(0);
+			}
 		}
 	}
 
 	&__body {
 		padding-top: 10px;
+		padding-right: 34px;
 
 		@include mq(sm) {
 			padding-top: 5px;
+			padding-right: 24px;
 			font-size: 12px;
 		}
 	}
