--- a/src/html/components/blocks/_questions.html
+++ b/src/html/components/blocks/_questions.html
@@ -28,10 +28,10 @@
                         <use xlink:href="img/sprite.svg#arrows-double">
                     </svg>
                 </button>
-                <p>
+                <p class="form__subtext">
                     Нажимая на кнопку, вы принимаете условия 
                     <a href="#">
-                            публичной оферты
+                        публичной оферты
                     </a> .
                 </p>
             </div>
