--- a/src/styles/includes/_components.scss
+++ b/src/styles/includes/_components.scss
@@ -13,6 +13,7 @@
 @import '../components/blocks/navigation-connection';
 @import '../components/blocks/side-menu';
 @import '../components/blocks/socials';
+@import '../components/blocks/form-block';
 @import '../components/blocks/questions';
 @import '../components/blocks/menu-mobile';
 @import '../components/blocks/breadcrumbs';
