--- a/src/styles/mixins/_project.scss
+++ b/src/styles/mixins/_project.scss
@@ -57,9 +57,12 @@
 }
 
 @mixin container {
-	padding: 0 45px;
+	padding-right: 45px;
+	padding-left: 45px;
+	width: 100%;
 
 	@include mq(lg) {
-		padding: 0 20px;
+		padding-right: 20px;
+		padding-left: 20px;
 	}
 }
