--- a/src/styles/includes/_components.scss
+++ b/src/styles/includes/_components.scss
@@ -14,6 +14,7 @@
 @import '../components/blocks/side-menu';
 @import '../components/blocks/socials';
 @import '../components/blocks/form-block';
+@import '../components/blocks/addresses-block';
 @import '../components/blocks/questions';
 @import '../components/blocks/menu-mobile';
 @import '../components/blocks/breadcrumbs';
@@ -22,3 +23,4 @@
 // Cards
 @import '../components/cards/banner-card';
 @import '../components/cards/nav-card';
+@import '../components/cards/address-card';
